# scoutforall

./: .gitignore  Cargo.toml  DATA-PRIVACY  EULA  LICENSE  README.md  build.rs
.github/: CODEOWNERS
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: build.yml  ci-cd.yml  deploy-pages.yml  publish.yml
assets/: scout4all.icns
scripts/: run_website.sh
src/: app.rs  constants.rs  errors.rs  lib.rs  localization.rs  main.rs  match.rs  menu.rs  ops.rs  pdf.rs  set.rs  structs.rs  substitution.rs  team.rs  util.rs
src/analytics/: global.rs  mod.rs  queue.rs  queue_manager.rs  upload.rs
src/io/: path.rs
src/logging/: logger.rs
src/providers/: match_reader.rs  match_writer.rs  mod.rs  queue_reader.rs  queue_writer.rs  set_reader.rs  set_writer.rs  settings_reader.rs  settings_writer.rs  team_reader.rs  team_writer.rs
src/providers/fs/: match_reader.rs  match_writer.rs  mod.rs  path.rs  queue_reader.rs  queue_writer.rs  set_reader.rs  set_writer.rs  settings_reader.rs  settings_writer.rs  team_reader.rs  team_writer.rs
src/reporting/: align.rs  circle.rs  court.rs  mod.rs  pdf.rs  stack.rs  table_row.rs  text.rs  typst_content.rs  util.rs
src/screens/: add_match.rs  add_match_screen.rs  add_player.rs  add_team.rs  edit_player.rs  edit_player_screen.rs  edit_team.rs  edit_team_screen.rs  export_match.rs  export_match_screen.rs  export_team.rs  export_team_screen.rs  file_system_screen.rs  import_match.rs  import_match_screen.rs  import_team.rs  import_team_screen.rs  keybindings_action_add_screen.rs  keybindings_action_screen.rs  keybindings_screen.rs  match_list.rs  match_list_screen.rs  match_stats_screen.rs  mod.rs  report_an_issue_screen.rs  scouting_screen.rs  screen.rs  settings.rs  settings_screen.rs  start_set_screen.rs  team_details.rs  team_details_screen.rs  team_list.rs  team_list_screen.rs
src/screens/components/: checkbox.rs  date_picker.rs  mod.rs  navigation_footer.rs  notify_banner.rs  notify_dialogue.rs  select.rs  team_header.rs  text_box.rs
src/shapes/: enums.rs  keybinding.rs  lineup.rs  match.rs  mod.rs  player.rs  set.rs  settings.rs  snapshot.rs  stats.rs  symbol.rs  team.rs
src/tests/: lineup_tests.rs  mod.rs  snapshot_tests.rs  substitution_tests.rs
tests/: snapshot.rs
web/: astro.config.mjs  package-lock.json  package.json
web/public/: manifest.json  robots.txt
web/src/components/: DownloadSection.astro  FooterMain.astro  HeaderMain.astro  HeroSection.astro  OverviewCarousel.astro
web/src/data/: download.json  faq.json  global_settings.json  overview.json
web/src/data/en/: faq.json  global_settings.json  home.json  overview.json
web/src/data/it/: faq.json  global_settings.json  home.json  overview.json
web/src/layouts/: Layout.astro
web/src/pages/: index.astro
web/src/pages/[lang]/: index.astro
