[package]
name = "scoutforall"
version = "0.1.0"
edition = "2021"

[dependencies]
ratatui = "0.29.0"
thiserror = "1.0"
typst = "0.13"
typst-pdf = "0.13"
typst-as-library = { git = "https://github.com/tfachmann/typst-as-library" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dirs = "5.0"
crossterm = "0.27"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
regex = "1"
csv = "1"
once_cell = "1.21.3"