[package]
name = "scout4all"
description = "scout4all is a CLI tool for collecting, managing and reporting volleyball match data. It helps coaches and analysts track match events and generate useful reports for post-game analysis."
keywords = ["volley", "volleyball", "tui", "ratatui"]
version = "0.0.2"
edition = "2021"
authors = ["Nicola @naighes Baldi <nic.baldi@gmail.com>"]
readme = "README.md"
homepage = "https://github.com/naighes/scoutforall"
repository = "https://github.com/naighes/scoutforall"
license = "CC-BY-NC-4.0"
rust-version = "1.89.0"

[profile.release]
opt-level = 3
debug = "none"
debug-assertions = false
overflow-checks = true
strip = true
panic = "abort"
incremental = false

[dependencies]
ratatui = "0.29.0"
thiserror = "1.0"
typst = "0.13"
typst-pdf = "0.13"
typst-as-library = { git = "https://github.com/tfachmann/typst-as-library" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dirs = "5.0"
crossterm = "0.27"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
regex = "1"
csv = "1"
once_cell = "1.21.3"
self_update = { version = "0.42.0", optional = true }
hf = "0.5.1"
zip = "5.1.1"

[lints.clippy]
type_complexity = "allow"
too_many_arguments = "allow"
match_str_case_mismatch = "allow"

[features]
default = []
self-update = ["self_update"]